# EasyVtuber

./: pyproject.toml
